--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To do</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+    <title>Todo list</title>
 </head>
 
 <body>
-
+    <div class="container">
+        <h3 class="text-center text-light mt-5 header-title"></h3>
+        <div class="text-center text-warning header-title-2">
+            Type your daily tasks and press enter key
+        </div>
+        <div class="row">
+            <input type="text" id="input" maxlength="40" class="col-8 d-flex justify-content-center form-control  mt-5  ml-auto mr-auto">
+        </div>
+        <button id="btn-submit" class="btn btn-outline-light d-flex justify-content-center  ml-auto mr-auto">submit</button>
+        <div id="todoList"></div>
+    </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
